# strategic_game

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  commands.sh  main.cpp
.github/workflows/: cmake.yml
app/: Action.h  GoldStash.cpp  GoldStash.h  Map.cpp  Map.h
app/units/: BaseBuildingUnit.cpp  BaseBuildingUnit.h  BaseUnit.cpp  BaseUnit.h  Owner.h  Unit.h  UnitFactory.cpp  UnitFactory.h  UnitType.h  WarUnit.cpp  WarUnit.h  WorkerUnit.cpp  WorkerUnit.h
app/utils/: Chance.cpp  Chance.h  Coordinates.h  Range.cpp  Range.h
tests/: CMakeLists.txt  exampleTest.cpp  rangeTests.cpp  testMain.cpp  unitTests.cpp
